--- a/Client/.env
+++ b/Client/.env
@@ -1,1 +1,4 @@
- VITE_BASE_URL = http://localhost:3000
+#VITE_BASE_URL = http://localhost:3000
+ VITE_BASE_URL = https://car-rental-server-six-khaki.vercel.app/
+
+                                        
